# anc-android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/anc/app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  native-lib.cpp
app/src/main/java/com/anc/app/: MainActivity.java
app/src/main/res/drawable/: bg_panel.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/anc/app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
